<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/popupwindow_height"
        android:layout_margin="@dimen/item_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popupwindow_stand_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/popupwindow_stand_info"
            android:textColor="@color/white"
            android:textSize="@dimen/popupwindow_textsize" />

        <View
            android:layout_width="@dimen/popupwindow_line_width"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/popupwindow_time_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/popupwindow_time_info"
            android:textColor="@color/white"
            android:textSize="@dimen/popupwindow_textsize" />

        <View
            android:layout_width="@dimen/popupwindow_line_width"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/popupwindow_progress_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/popupwindow_progress_info"
            android:textColor="@color/white"
            android:textSize="@dimen/popupwindow_textsize" />

        <View
            android:layout_width="@dimen/popupwindow_line_width"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/popupwindow_slection_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/popupwindow_slection_state"
            android:textColor="@color/white"
            android:textSize="@dimen/popupwindow_textsize" />

    </LinearLayout>
</LinearLayout>